--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,5 +1,5 @@
-footer {
-  position: fixed;
+.app-footer {
+  position: block;
   bottom: 0;
   left: 0;
   right: 0;
@@ -11,10 +11,5 @@ footer {
   font-weight: 600;
   padding-left: 20px;
   padding-right: 20px;
-}
-
-
-footer a {
-  display: flex;
-  align-items: center;
+  margin-top: 40px;
 }
