--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,5 +1,5 @@
 .app-header {
-  position: fixed;
+  position: block;
   top: 0;
   left: 0;
   right: 0;
@@ -11,4 +11,5 @@
   font-weight: 600;
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 40px;
 }
