--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,3 +1,13 @@
-<div>
-  <mat-checkbox class="custom-frame">This is my todo list</mat-checkbox>
+<div class="todo-item__container">
+  <input type="checkbox" checked id="todo-item-checkbox1" />
+  <label for="todo-item-checkbox1"></label>
+  <span class="todo-item__text">This is my todo 1</span>
+  <hr />
+</div>
+
+<div class="todo-item__container">
+  <input type="checkbox" checked id="todo-item-checkbox2" />
+  <label for="todo-item-checkbox2"></label>
+  <span class="todo-item__text" id="todo-item__text">This is my todo 1</span>
+  <hr />
 </div>
