--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
-body {
-  background-color: #f5f5f5;
+.app-root-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .app-body {
   padding-left: 20px;
   padding-right: 20px;
+  min-height: calc( 100vh - 200px );
+  margin: 0 auto;
 }
