--- a/src/app/todos/todo-item/todo-item.component.css
+++ b/src/app/todos/todo-item/todo-item.component.css
@@ -1,5 +1,60 @@
-::ng-deep {
-  .mat-checkbox-inner-container {
-      top: 5px !important;
-    }
-  }
+.todo-item__container {
+  position: relative;
+}
+
+.todo-item__container label {
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 28px;
+  margin-left: 10px;
+}
+
+.todo-item__container label:after {
+  border: 2px solid #4d4d4d;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.todo-item__container input[type="checkbox"] {
+  visibility: hidden;
+  margin-left: 40px;
+  margin-top: 8px;
+}
+
+.todo-item__container input[type="checkbox"]:checked + label {
+  background-color: transparent;
+  border-color: #66bb6a;
+}
+
+.todo-item__container input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
+
+.todo-item__container hr {
+  margin-top: 16px;
+  color: #ededed;
+  opacity: 0.2;
+}
+
+.todo-item__text {
+  font-size: 20px;
+}
+
+input[type="checkbox"]:checked ~ .todo-item__text {
+  text-decoration: line-through;
+  color: gray;
+  opacity: 0.5;
+}
