--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,3 +1,3 @@
-<ng-container *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]">
+<div class="todo-list__container">
   <app-todo-item></app-todo-item>
-</ng-container>
+</div>
