--- a/src/app/todos/todo-summary/todo-summary.component.html
+++ b/src/app/todos/todo-summary/todo-summary.component.html
@@ -1,5 +1,11 @@
-<mat-tab-group headerPosition="below" dynamicHeight>
-  <mat-tab label="All" id="all-tab"> <app-todo-list></app-todo-list> </mat-tab>
-  <mat-tab label="Active" id="active-tab"> <app-todo-list></app-todo-list> </mat-tab>
-  <mat-tab label="Completed" id="completed-tab"> <app-todo-list></app-todo-list> </mat-tab>
-</mat-tab-group>
+<div class="todos-summarry__container">
+  <div><small id="todos-summarry__item-left">1 item left</small></div>
+  <div class="todos-summarry__filter">
+    <span><small id="todos-summarry__filter-all">All</small></span>
+    <span><small id="todos-summarry__filter-active">Active</small></span>
+    <span><small id="todos-summarry__filter-completed">Completed</small></span>
+  </div>
+  <div>
+    <span><small id="todos-summarry__clear-completed">Clear completed</small></span>
+  </div>
+</div>
