--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -6,7 +6,8 @@
     </div>
     <hr />
     <div class="todos-card__content">
-      <app-todo-list></app-todo-list>
+      <!-- <app-todo-list></app-todo-list> -->
+      <router-outlet></router-outlet>
     </div>
     <div class="todo-card__summary">
       <app-todo-summary></app-todo-summary>
