--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,3 +1,3 @@
-<div class="todo-list__container">
-  <app-todo-item></app-todo-item>
+<div class="todo-list__container" *ngIf="todos$ | async as todos">
+  <app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
 </div>
