--- a/src/app/todos/todo-summary/todo-summary.component.css
+++ b/src/app/todos/todo-summary/todo-summary.component.css
@@ -7,8 +7,28 @@
   color: #777777;
 }
 
-.todos-summarry__filter > span{
+.todos-summarry__filter > span {
   /* display: grid;
   grid-template-columns: 1fr 1fr 1fr; */
   margin-left: 32px;
+}
+
+.todos-summarry__filter-active-link {
+  border: 1px solid #000;
+}
+
+.todos-summarry__filter a,
+.todos-summarry__filter a:hover,
+.todos-summarry__filter a:visited,
+.todos-summarry__filter a:active {
+  color: inherit;
+  text-decoration: none;
+  padding:0 4px 0 4px;
+  cursor: pointer;
+}
+
+.todos-summarry__clear-completed {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
