--- a/src/app/todos/todo-action/todo-action.component.html
+++ b/src/app/todos/todo-action/todo-action.component.html
@@ -1,4 +1,11 @@
 <div class="todo-action__container">
-  <div class="todo-action__check-all"><i class="fas fa-chevron-down"></i></div>
-  <div class="todo-action__input"><input type="text" placeholder="What needs to be done?"/></div>
+  <div class="todo-action__check-all" [class.todo-action__check-all-hightlight]="allCompleted" (click)="updateAll()"><i class="fas fa-chevron-down"></i></div>
+  <div class="todo-action__input">
+    <input
+      type="text"
+      placeholder="What needs to be done?"
+      [(ngModel)]="todoTitle"
+      (keydown)="handleKeyDown($event)"
+    />
+  </div>
 </div>
