--- a/src/app/todos/todo-item/todo-item.component.css
+++ b/src/app/todos/todo-item/todo-item.component.css
@@ -58,3 +58,23 @@ input[type="checkbox"]:checked ~ .todo-item__text {
   color: gray;
   opacity: 0.5;
 }
+
+.todo-item__delete {
+  position: absolute;
+  right: 10px;
+  top: 4px;
+  color: gray;
+  padding: 0 5px;
+  cursor: pointer;
+  display: none; /* Hide the X icon by default */
+}
+
+.todo-item__container:hover .todo-item__delete {
+  display: inline-block;
+}
+
+.todo-item__text-input {
+  font-size: 24px;
+  border: 1px solid #ead7d7;
+  outline: none;
+}
