--- a/src/app/todos/todo-summary/todo-summary.component.html
+++ b/src/app/todos/todo-summary/todo-summary.component.html
@@ -1,5 +1,7 @@
 <div class="todos-summarry__container">
-  <div><small id="todos-summarry__item-left">1 item left</small></div>
+  <div>
+    <small id="todos-summarry__item-left">{{ itemLeftText }}</small>
+  </div>
   <div class="todos-summarry__filter">
     <span>
       <a
@@ -25,7 +27,10 @@
   </div>
   <div>
     <span>
-      <button class="todos-summarry__clear-completed">
+      <button
+        class="todos-summarry__clear-completed"
+        (click)="clearCompletedTodo()"
+      >
         <small id="todos-summarry__clear-completed">Clear completed</small>
       </button>
     </span>
