--- a/src/app/todos/todo-summary/todo-summary.component.html
+++ b/src/app/todos/todo-summary/todo-summary.component.html
@@ -25,7 +25,7 @@
       >
     </span>
   </div>
-  <div>
+  <div [hidden]="!hasCompletedTodos">
     <span>
       <button
         class="todos-summarry__clear-completed"
