--- a/src/app/todos/todos.component.css
+++ b/src/app/todos/todos.component.css
@@ -5,7 +5,7 @@
 }
 
 .todos-card__container {
-  max-width: 550px;
+  width: 550px;
   border: 1px solid #ead7d7;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
